fix: adjust z-index menu mobile

--- a/frontend/src/styles/calendar.css
+++ b/frontend/src/styles/calendar.css
@@ -21,6 +21,7 @@
 #calendar {
   width: 100%;
   height: 600px;
+  z-index: -1;
 }
 .fc {
   font-size: 12px;
